--- a/instagram.html
+++ b/instagram.html
@@ -9,5 +9,6 @@
 <body>
     <h1 class="insta-class">insta</h1>
     <p class="tools-class">Home ,story , Reel</p>
+    <h3>Profile</h3>
 </body>
 </html>
